Remove some usages of `StringUtils` (#35)